# witness-stand

./: .gitignore
backend/: .env.example  .gitignore  README.md  llm.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  server.js
backend/fixtures/: README.md
backend/fixtures/lesson_plans/: operating-systems-paging.json  operating-systems-topics.json
backend/prompts/: co_counsel_system.md  evaluation_system.md  lesson_plan_system.md  opposition_system.md  post_trial_co_counsel_system.md  subtopic_planner_system.md
backend/src/oyez/: __init__.py  config.py  constants.py  logging_setup.py  main.py
backend/src/oyez/ai/: __init__.py  base.py  file_llm.py  gemma.py  mock.py
backend/src/oyez/ai/prompts/: __init__.py  (+7 more)
backend/src/oyez/api/: __init__.py  _deps.py  co_counsel.py  files.py  lesson_plan.py  post_trial.py  sessions.py  subtopics.py  turns.py
backend/src/oyez/schemas/: __init__.py  examiner.py  files.py  lesson_plan.py  scoring.py  session.py  subtopics.py
backend/src/oyez/services/: __init__.py  deltas.py  fixtures.py  session_store.py
backend/src/witness_stand/: __init__.py  config.py  constants.py  logging_setup.py  main.py
backend/src/witness_stand/ai/: __init__.py  file_llm.py  gemma.py  mock.py
backend/src/witness_stand/api/: __init__.py  _deps.py  co_counsel.py  files.py  lesson_plan.py  sessions.py  subtopics.py  turns.py
backend/src/witness_stand/schemas/: __init__.py  examiner.py  lesson_plan.py  session.py  subtopics.py
backend/src/witness_stand/services/: __init__.py  deltas.py  fixtures.py  session_store.py
(+41 files in other folders)
