[project]
name = "oyez-backend"
version = "0.1.0"
description = "Backend for Oyez — courtroom-style academic cross-examination."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.6.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "oyez"
module-root = "src"
